add remove function
